--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,6 +10,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Archive artefact
+        run: "tar -cvf dist.tar.gz ./"
+      
+      - name: SSH copy file to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: 22
+          source: "dist.tar.gz"
+          target: "/var/www/dashboard.bahranda.com"
+
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         with:
