--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,4 +29,12 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           host: ${{ secrets.SSH_HOST }}
           password: ${{ secrets.SSH_PASSWORD }}
-          script: "cd  /var/www/dashboard.bahranda.com/ && chmod +x ./server_deploy.sh && ./server_deploy.sh"
+          script: |
+                cd /var/www/dashboard.bahranda.com
+                php artisan down --message 'The app is being (quickly!) updated. Please try again in a minute.'
+                tar xf dist.tar.gz
+                rm dist.tar.gz
+                composer install --no-interaction --prefer-dist --optimize-autoloader
+                # Migrate database
+                php artisan migrate
+                php artisan up
